--- a/movie.html
+++ b/movie.html
@@ -2,122 +2,174 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<title>Movie Player</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Movie Details</title>
-<style>
-  body { font-family: Arial, sans-serif; background:#f9f9f9; margin:0; padding:0;}
-  .container { max-width: 900px; margin: 20px auto; padding: 0 15px;}
-  .header { margin-bottom: 15px;}
-  .header h1 { font-size:28px; margin:5px 0;}
-  .header p { color:#555; font-size:14px; margin:2px 0;}
-  .flex { display:flex; flex-wrap:wrap; gap:20px;}
-  .poster { width:250px; flex-shrink:0; border-radius:10px; overflow:hidden; position:relative; cursor:pointer;}
-  .poster img { width:100%; border-radius:10px; object-fit:cover; transition: transform 0.3s; }
-  .poster:hover img { transform: scale(1.05); }
-  .play-overlay { position:absolute; top:50%; left:50%; transform:translate(-50%, -50%); 
-                  background: rgba(0,0,0,0.6); color:#fff; font-size:36px; padding:15px 25px; border-radius:50%; cursor:pointer; }
-  .details { flex:1; min-width:300px;}
-  .buttons { display:flex; gap:10px; margin:15px 0;}
-  .btn { flex:1; padding:12px 0; border:none; color:#fff; font-weight:bold; cursor:pointer; border-radius:5px; font-size:16px;}
-  .share-btn { background:#25d366; }
-  .share-btn:hover { background:#1da851; }
-  .player-container { width:100%; height:500px; border-radius:10px; background:#000; position:relative; margin-top:20px; opacity:0; transition: opacity 0.5s; }
-  iframe, video { width:100%; height:100%; border:none; border-radius:10px; }
-  .synopsis { color:#333; line-height:1.5; margin-top:10px;}
-</style>
-</head>
-<body>
 
-<div class="container">
-  <div class="header">
-    <h1 id="movie-title">Movie Title</h1>
-    <p id="movie-meta">2023 • Action • India • 1h 05m</p>
-  </div>
-
-  <div class="flex">
-    <!-- Poster with overlay play button -->
-    <div class="poster" id="poster-container">
-      <img id="poster-img" src="" alt="Poster">
-      <div class="play-overlay" id="poster-play">▶</div>
-    </div>
-
-    <!-- Details -->
-    <div class="details">
-      <p class="synopsis" id="movie-synopsis"></p>
-      <div class="buttons">
-        <button class="btn share-btn" id="share-btn">Share</button>
-      </div>
-    </div>
-  </div>
-
-  <!-- Player appears here -->
-  <div class="player-container" id="player-container"></div>
-</div>
-
-<!-- 1️⃣ Load movies-data.js first -->
+<!-- Load movie data -->
 <script src="movies-data.js"></script>
 
-<!-- 2️⃣ Main script -->
+<!-- Firebase SDKs (for comments) -->
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
+
+<script>
+const firebaseConfig = {
+  apiKey: "AIzaSyBGGV9F3Nv13nRJ8t4QCP5Y0IosmKfYz1s",
+  authDomain: "busanso-pins.firebaseapp.com",
+  databaseURL: "https://busanso-pins-default-rtdb.firebaseio.com",
+  projectId: "busanso-pins",
+  storageBucket: "busanso-pins.firebasestorage.app",
+  messagingSenderId: "137040014808",
+  appId: "1:137040014808:web:b0684e17b6b0328da596ad"
+};
+firebase.initializeApp(firebaseConfig);
+</script>
+
+<style>
+body { margin:0; background:#000; color:#fff; font-family:Arial,sans-serif; padding:16px; }
+.logo { text-align:center; margin-bottom:12px; }
+.logo img { max-height:50px; }
+.player { width:100%; max-width:800px; margin:0 auto; }
+.player iframe { width:100%; height:56vw; max-height:500px; border:none; }
+.details { max-width:800px; margin:16px auto; padding:16px; background:#111; border-radius:12px; }
+.meta { color:#aaa; font-size:14px; margin-bottom:8px; }
+.actions button { width:100%; padding:16px; margin-top:12px; font-size:16px; border:none; border-radius:10px; font-weight:bold; cursor:pointer; }
+.watch { background:#e50914; color:#fff; font-size:18px; }
+.cast span { background:#181818; padding:6px 10px; border-radius:20px; font-size:12px; margin:4px; display:inline-block; }
+
+/* COMMENTS */
+#commentsSection { max-width:800px; margin:20px auto; background:#111; padding:16px; border-radius:12px; }
+#commentsList div { margin-bottom:6px; padding:8px 10px; background:#222; border-radius:8px; position:relative; word-wrap:break-word; }
+#usernameInput, #commentInput { width:100%; padding:10px; border-radius:6px; background:#111; color:#fff; border:none; margin-top:6px; }
+#commentBtn { margin-top:8px; padding:10px 18px; border:none; border-radius:8px; background:#e50914; color:#fff; font-weight:bold; cursor:pointer; font-size:15px; }
+#commentMsg { margin-top:6px; font-size:14px; }
+</style>
+</head>
+
+<body>
+
+<div class="logo">
+  <img src="https://i.ibb.co/hxgrLF35/BUSANSO-New.png" alt="Logo">
+</div>
+
+<div class="player" id="player"></div>
+
+<div class="details">
+  <h1 id="title"></h1>
+  <div class="meta" id="meta"></div>
+  <button class="watch" id="watchBtn">▶ Watch Now</button>
+  <p id="synopsis"></p>
+  <div class="cast" id="cast"></div>
+</div>
+
+<div id="commentsSection">
+  <h3>Comments</h3>
+  <input id="usernameInput" placeholder="Enter your name">
+  <textarea id="commentInput" placeholder="Write your comment"></textarea>
+  <button id="commentBtn">Post Comment</button>
+  <div id="commentMsg"></div>
+  <div id="commentsList"></div>
+</div>
+
 <script>
 window.addEventListener('DOMContentLoaded', () => {
-  const params = new URLSearchParams(window.location.search);
-  const movieId = params.get('id');
-  const movie = movies.find(m => m.id === movieId) || movies[0];
 
-  document.getElementById('movie-title').textContent = movie.title;
-  document.getElementById('movie-meta').textContent = `${movie.year} • ${movie.type} • ${movie.country} • ${movie.duration}`;
-  document.getElementById('poster-img').src = movie.poster;
-  document.getElementById('movie-synopsis').textContent = movie.synopsis;
+  // ===== DOM ELEMENTS =====
+  const title = document.getElementById("title");
+  const meta = document.getElementById("meta");
+  const synopsis = document.getElementById("synopsis");
+  const cast = document.getElementById("cast");
+  const player = document.getElementById("player");
+  const watchBtn = document.getElementById("watchBtn");
 
-  const posterContainer = document.getElementById('poster-container');
-  const playerContainer = document.getElementById('player-container');
-  const posterPlay = document.getElementById('poster-play');
-  const shareBtn = document.getElementById('share-btn');
+  // ===== FETCH MOVIE =====
+  const params = new URLSearchParams(location.search);
+  const id = params.get("id");
+  if(!id) location.replace("movies-list.html"); // fallback if no id
 
-  function normalizeVideoUrl(url) {
-    if (url.includes("drive.google.com")) {
-      const match = url.match(/\/d\/(.*?)\//);
-      if (match) return `https://drive.google.com/file/d/${match[1]}/preview`;
-    }
-    return url;
-  }
+  const movie = movies.find(m => m.id === id);
+  if(!movie) location.replace("movies-list.html");
 
-  function loadPlayer(url) {
-    url = normalizeVideoUrl(url);
-    let player;
-    if (url.includes('youtube.com')) {
-      player = document.createElement('iframe');
-      player.src = url + "?autoplay=1&controls=1&modestbranding=1&rel=0&showinfo=0";
-      player.allow = "autoplay; encrypted-media";
-    } else if (url.includes('vimeo.com')) {
-      player = document.createElement('iframe');
-      player.src = url + "?autoplay=1&title=0&byline=0&portrait=0";
-      player.allow = "autoplay; fullscreen";
-    } else {
-      player = document.createElement('iframe'); // Google Drive preview
-      player.src = url;
-      player.allow = "autoplay; fullscreen";
-    }
-    player.width = "100%";
-    player.height = "100%";
-    return player;
-  }
-
-  function playMovie() {
-    posterContainer.style.display = 'none';
-    playerContainer.style.display = 'block';
-    const player = loadPlayer(movie.video);
-    playerContainer.appendChild(player);
-    setTimeout(() => playerContainer.style.opacity = 1, 50);
-  }
-
-  posterPlay.addEventListener('click', playMovie);
-  posterContainer.addEventListener('click', playMovie);
-
-  shareBtn.addEventListener('click', () => {
-    const text = encodeURIComponent(`${movie.title}\n\n${movie.synopsis}\n\nWatch here: ${window.location.href}`);
-    window.open(`https://wa.me/?text=${text}`, "_blank");
+  // Populate movie info
+  title.textContent = movie.title;
+  meta.textContent = `${movie.year} • ${movie.type} • ${movie.country} • ${movie.duration}`;
+  synopsis.textContent = movie.synopsis || "";
+  movie.cast?.forEach(c => {
+    const span = document.createElement("span");
+    span.textContent = c;
+    cast.appendChild(span);
   });
+
+  // ===== VIDEO NORMALIZATION =====
+  function normalizeVideo(url){
+    try {
+      url = url.trim();
+      if(url.includes("youtube.com") || url.includes("youtu.be")) {
+        const ytId = url.includes("v=") ? new URL(url).searchParams.get("v") : url.split("/").pop();
+        return `https://www.youtube.com/embed/${ytId}?autoplay=1&controls=1&modestbranding=1&rel=0&showinfo=0`;
+      }
+      if(url.includes("vimeo.com")) {
+        const vimeoId = url.split("/").pop();
+        return `https://player.vimeo.com/video/${vimeoId}?autoplay=1&title=0&byline=0&portrait=0`;
+      }
+      if(url.includes("/d/")) { // Google Drive
+        const driveId = url.split("/d/")[1].split("/")[0];
+        return `https://drive.google.com/file/d/${driveId}/preview`;
+      }
+      return url;
+    } catch {
+      return url;
+    }
+  }
+
+  // ===== PLAY VIDEO =====
+  watchBtn.onclick = () => {
+    player.innerHTML = `<iframe src="${normalizeVideo(movie.video)}" allowfullscreen></iframe>`;
+    window.scrollTo({ top:0, behavior:"smooth" });
+  };
+
+  // ===== COMMENTS LOGIC =====
+  const commentsRef = firebase.database().ref("comments/movies/"+movie.id);
+  const usernameInput = document.getElementById("usernameInput");
+  const commentInput = document.getElementById("commentInput");
+  const commentMsg = document.getElementById("commentMsg");
+  const commentsList = document.getElementById("commentsList");
+
+  const savedName = localStorage.getItem("username");
+  if(savedName) usernameInput.value = savedName;
+
+  document.getElementById("commentBtn").onclick = () => {
+    const name = usernameInput.value.trim();
+    const text = commentInput.value.trim();
+    if(name.length < 2 || name.length > 20){
+      commentMsg.style.color="#ffb400";
+      commentMsg.textContent="Nickname must be 2–20 characters";
+      return;
+    }
+    if(text.length < 2 || text.length > 300){
+      commentMsg.style.color="#ffb400";
+      commentMsg.textContent="Comment must be 2–300 characters";
+      return;
+    }
+    localStorage.setItem("username", name);
+    commentsRef.push({ user:name, text, timestamp:Date.now() });
+    commentInput.value="";
+    commentMsg.style.color="#00ff66";
+    commentMsg.textContent="Comment posted";
+  };
+
+  commentsRef.on("value", snap => {
+    commentsList.innerHTML="";
+    const commentsArray = [];
+    snap.forEach(c => commentsArray.push({...c.val(), ref:c.ref}));
+    commentsArray.sort((a,b) => b.timestamp - a.timestamp);
+    commentsArray.forEach(c => {
+      const div = document.createElement("div");
+      div.innerHTML=`<strong>${c.user}</strong>: ${c.text}`;
+      commentsList.appendChild(div);
+    });
+  });
+
 });
 </script>
 
