--- a/movie.html
+++ b/movie.html
@@ -2,13 +2,85 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Movie Player</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Movie Player</title>
+<style>
+  body { font-family: Arial, sans-serif; background:#111; color:#fff; margin:0; padding:16px; }
+  .container { max-width: 900px; margin:0 auto; }
+  .logo { text-align:center; margin-bottom:12px; }
+  .logo img { max-height:50px; }
 
-<!-- Load movie data -->
+  .player-container { width:100%; height:0; padding-bottom:56.25%; position:relative; display:none; margin-bottom:20px; }
+  .player-container iframe { position:absolute; top:0; left:0; width:100%; height:100%; border:none; border-radius:10px; }
+
+  .poster { position:relative; cursor:pointer; margin-bottom:20px; border-radius:10px; overflow:hidden; max-width:400px; }
+  .poster img { width:100%; border-radius:10px; display:block; }
+  .play-overlay { position:absolute; top:50%; left:50%; transform:translate(-50%, -50%);
+                  background:rgba(0,0,0,0.6); color:#fff; font-size:48px; padding:20px 28px; border-radius:50%; }
+
+  h1 { margin:0 0 10px 0; }
+  .meta { color:#aaa; font-size:14px; margin-bottom:10px; }
+  .synopsis { line-height:1.5; margin-bottom:12px; }
+  .cast span { background:#222; padding:6px 10px; border-radius:20px; font-size:12px; margin:4px; display:inline-block; }
+
+  .buttons { display:flex; gap:10px; margin-bottom:20px; }
+  .btn { flex:1; padding:12px 0; border:none; font-weight:bold; cursor:pointer; border-radius:5px; font-size:16px; }
+  .watch-btn { background:#e50914; color:#fff; }
+  .watch-btn:hover { background:#b80610; }
+  .share-btn { background:#25d366; color:#fff; }
+  .share-btn:hover { background:#1da851; }
+
+  /* COMMENTS */
+  #commentsSection { background:#222; padding:16px; border-radius:12px; margin-bottom:20px; }
+  #commentsSection h3 { margin-top:0; }
+  #commentsList div { margin-bottom:6px; padding:8px 10px; background:#111; border-radius:8px; position:relative; word-wrap:break-word; }
+  #usernameInput, #commentInput { width:100%; padding:10px; border-radius:6px; background:#111; color:#fff; border:none; margin-top:6px; }
+  #commentBtn { margin-top:8px; padding:10px 18px; border:none; border-radius:8px; background:#e50914; color:#fff; font-weight:bold; cursor:pointer; font-size:15px; }
+  #commentMsg { margin-top:6px; font-size:14px; }
+</style>
+</head>
+<body>
+
+<div class="container">
+  <div class="logo">
+    <img src="https://i.ibb.co/hxgrLF35/BUSANSO-New.png" alt="Logo">
+  </div>
+
+  <!-- Poster with play overlay -->
+  <div class="poster" id="poster-container">
+    <img id="poster-img" src="" alt="Movie Poster">
+    <div class="play-overlay" id="poster-play">▶</div>
+  </div>
+
+  <!-- Player iframe -->
+  <div class="player-container" id="player-container"></div>
+
+  <!-- Movie details -->
+  <h1 id="title"></h1>
+  <div class="meta" id="meta"></div>
+  <p class="synopsis" id="synopsis"></p>
+  <div class="cast" id="cast"></div>
+
+  <div class="buttons">
+    <button class="btn watch-btn" id="watch-btn">▶ Watch</button>
+    <button class="btn share-btn" id="share-btn">Share</button>
+  </div>
+
+  <!-- Comments -->
+  <div id="commentsSection">
+    <h3>Comments</h3>
+    <input id="usernameInput" placeholder="Enter your name">
+    <textarea id="commentInput" placeholder="Write your comment"></textarea>
+    <button id="commentBtn">Post Comment</button>
+    <div id="commentMsg"></div>
+    <div id="commentsList"></div>
+  </div>
+</div>
+
+<!-- Load movies-data.js first -->
 <script src="movies-data.js"></script>
 
-<!-- Firebase SDKs (for comments) -->
+<!-- Firebase SDKs -->
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
 
@@ -25,108 +97,78 @@ const firebaseConfig = {
 firebase.initializeApp(firebaseConfig);
 </script>
 
-<style>
-body { margin:0; background:#000; color:#fff; font-family:Arial,sans-serif; padding:16px; }
-.logo { text-align:center; margin-bottom:12px; }
-.logo img { max-height:50px; }
-.player { width:100%; max-width:800px; margin:0 auto; }
-.player iframe { width:100%; height:56vw; max-height:500px; border:none; }
-.details { max-width:800px; margin:16px auto; padding:16px; background:#111; border-radius:12px; }
-.meta { color:#aaa; font-size:14px; margin-bottom:8px; }
-.actions button { width:100%; padding:16px; margin-top:12px; font-size:16px; border:none; border-radius:10px; font-weight:bold; cursor:pointer; }
-.watch { background:#e50914; color:#fff; font-size:18px; }
-.cast span { background:#181818; padding:6px 10px; border-radius:20px; font-size:12px; margin:4px; display:inline-block; }
-
-/* COMMENTS */
-#commentsSection { max-width:800px; margin:20px auto; background:#111; padding:16px; border-radius:12px; }
-#commentsList div { margin-bottom:6px; padding:8px 10px; background:#222; border-radius:8px; position:relative; word-wrap:break-word; }
-#usernameInput, #commentInput { width:100%; padding:10px; border-radius:6px; background:#111; color:#fff; border:none; margin-top:6px; }
-#commentBtn { margin-top:8px; padding:10px 18px; border:none; border-radius:8px; background:#e50914; color:#fff; font-weight:bold; cursor:pointer; font-size:15px; }
-#commentMsg { margin-top:6px; font-size:14px; }
-</style>
-</head>
-
-<body>
-
-<div class="logo">
-  <img src="https://i.ibb.co/hxgrLF35/BUSANSO-New.png" alt="Logo">
-</div>
-
-<div class="player" id="player"></div>
-
-<div class="details">
-  <h1 id="title"></h1>
-  <div class="meta" id="meta"></div>
-  <button class="watch" id="watchBtn">▶ Watch Now</button>
-  <p id="synopsis"></p>
-  <div class="cast" id="cast"></div>
-</div>
-
-<div id="commentsSection">
-  <h3>Comments</h3>
-  <input id="usernameInput" placeholder="Enter your name">
-  <textarea id="commentInput" placeholder="Write your comment"></textarea>
-  <button id="commentBtn">Post Comment</button>
-  <div id="commentMsg"></div>
-  <div id="commentsList"></div>
-</div>
-
 <script>
 window.addEventListener('DOMContentLoaded', () => {
-
-  // ===== DOM ELEMENTS =====
+  // DOM refs
   const title = document.getElementById("title");
   const meta = document.getElementById("meta");
   const synopsis = document.getElementById("synopsis");
   const cast = document.getElementById("cast");
-  const player = document.getElementById("player");
-  const watchBtn = document.getElementById("watchBtn");
+  const posterImg = document.getElementById("poster-img");
+  const posterPlay = document.getElementById("poster-play");
+  const posterContainer = document.getElementById("poster-container");
+  const playerContainer = document.getElementById("player-container");
+  const watchBtn = document.getElementById("watch-btn");
+  const shareBtn = document.getElementById("share-btn");
 
-  // ===== FETCH MOVIE =====
+  // Get movie from URL
   const params = new URLSearchParams(location.search);
   const id = params.get("id");
-  if(!id) location.replace("movies-list.html"); // fallback if no id
+  if(!id) location.replace("movies-list.html");
 
-  const movie = movies.find(m => m.id === id);
+  const movie = movies.find(m=>m.id===id);
   if(!movie) location.replace("movies-list.html");
 
-  // Populate movie info
+  // Populate page
   title.textContent = movie.title;
   meta.textContent = `${movie.year} • ${movie.type} • ${movie.country} • ${movie.duration}`;
   synopsis.textContent = movie.synopsis || "";
+  posterImg.src = movie.poster || "";
   movie.cast?.forEach(c => {
     const span = document.createElement("span");
     span.textContent = c;
     cast.appendChild(span);
   });
 
-  // ===== VIDEO NORMALIZATION =====
+  // Normalize video URLs
   function normalizeVideo(url){
-    try {
+    try{
       url = url.trim();
-      if(url.includes("youtube.com") || url.includes("youtu.be")) {
+      if(url.includes("youtube.com") || url.includes("youtu.be")){
         const ytId = url.includes("v=") ? new URL(url).searchParams.get("v") : url.split("/").pop();
         return `https://www.youtube.com/embed/${ytId}?autoplay=1&controls=1&modestbranding=1&rel=0&showinfo=0`;
       }
-      if(url.includes("vimeo.com")) {
+      if(url.includes("vimeo.com")){
         const vimeoId = url.split("/").pop();
         return `https://player.vimeo.com/video/${vimeoId}?autoplay=1&title=0&byline=0&portrait=0`;
       }
-      if(url.includes("/d/")) { // Google Drive
+      if(url.includes("/d/")){ // Google Drive
         const driveId = url.split("/d/")[1].split("/")[0];
         return `https://drive.google.com/file/d/${driveId}/preview`;
       }
       return url;
-    } catch {
+    }catch{
       return url;
     }
   }
 
-  // ===== PLAY VIDEO =====
-  watchBtn.onclick = () => {
-    player.innerHTML = `<iframe src="${normalizeVideo(movie.video)}" allowfullscreen></iframe>`;
+  // Play movie
+  function playMovie(){
+    posterContainer.style.display = 'none';
+    playerContainer.style.display = 'block';
+    playerContainer.innerHTML = `<iframe src="${normalizeVideo(movie.video)}" allowfullscreen></iframe>`;
     window.scrollTo({ top:0, behavior:"smooth" });
-  };
+  }
+
+  posterPlay.addEventListener('click', playMovie);
+  posterContainer.addEventListener('click', playMovie);
+  watchBtn.addEventListener('click', playMovie);
+
+  // Share to WhatsApp
+  shareBtn.addEventListener('click', ()=>{
+    const text = encodeURIComponent(`${movie.title}\n\n${movie.synopsis}\n\nWatch here: ${window.location.href}`);
+    window.open(`https://wa.me/?text=${text}`, "_blank");
+  });
 
   // ===== COMMENTS LOGIC =====
   const commentsRef = firebase.database().ref("comments/movies/"+movie.id);
@@ -158,20 +200,32 @@ window.addEventListener('DOMContentLoaded', () => {
     commentMsg.textContent="Comment posted";
   };
 
-  commentsRef.on("value", snap => {
+  commentsRef.on("value", snap=>{
     commentsList.innerHTML="";
     const commentsArray = [];
     snap.forEach(c => commentsArray.push({...c.val(), ref:c.ref}));
-    commentsArray.sort((a,b) => b.timestamp - a.timestamp);
-    commentsArray.forEach(c => {
+    commentsArray.sort((a,b)=>b.timestamp - a.timestamp);
+    commentsArray.forEach(c=>{
       const div = document.createElement("div");
       div.innerHTML=`<strong>${c.user}</strong>: ${c.text}`;
+      
+      // Admin delete button
+      if(localStorage.getItem("activePIN")==="Orion196"){
+        const b = document.createElement("button");
+        b.textContent="🗑";
+        Object.assign(b.style,{
+          position:"absolute", right:"6px", top:"6px", background:"#e50914", color:"#fff", border:"none",
+          borderRadius:"6px", padding:"2px 6px", cursor:"pointer"
+        });
+        b.onclick = ()=>c.ref.remove();
+        div.appendChild(b);
+      }
+
       commentsList.appendChild(div);
     });
   });
 
 });
 </script>
-
 </body>
 </html>
