--- a/movie.html
+++ b/movie.html
@@ -11,64 +11,82 @@ body {
   margin:0;
   background:#111;
   color:#fff;
-  font-family: Arial,sans-serif;
+  font-family: Arial, sans-serif;
 }
+
 .banner {
   position: relative;
   width: 100%;
-  height: 50vh;
-  max-height: 400px;
+  height: 55vh;
+  max-height: 450px;
   overflow: hidden;
   display: flex;
   align-items: flex-end;
   justify-content: center;
 }
+
 .banner img {
-  width: auto;
+  width: 100%;
   height: 100%;
   object-fit: cover;
   object-position: center;
-  transition: transform 0.5s ease;
+  transition: transform 0.6s ease;
+  transform: scale(1.1); /* zoom for Netflix feel */
 }
+
 .banner:hover img {
-  transform: scale(1.05);
+  transform: scale(1.15);
 }
-/* Gradient overlay instead of ugly fade */
+
+/* Full gradient overlay */
 .banner::after {
   content:"";
   position:absolute;
-  bottom:0;
+  top:0;
+  left:0;
   width:100%;
   height:100%;
-  background: linear-gradient(to top, rgba(0,0,0,0.7) 20%, transparent 80%);
+  background: linear-gradient(to top, rgba(0,0,0,0.85) 30%, rgba(0,0,0,0.3) 60%, transparent 100%);
   pointer-events:none;
 }
+
+/* Buttons on top of gradient */
 .banner .buttons {
   position: absolute;
-  bottom:20px;
+  bottom: 30px;
   display:flex;
   gap:12px;
   justify-content:center;
   width:100%;
+  z-index: 2; /* ensure buttons above gradient */
 }
+
 button {
-  padding:12px 24px;
+  padding:14px 28px;
   font-size:16px;
   border:none;
   border-radius:8px;
   cursor:pointer;
   font-weight:bold;
+  box-shadow:0 2px 6px rgba(0,0,0,0.5);
+  opacity: 1; /* fully visible */
+  transition: transform 0.2s;
 }
+
+button:hover {
+  transform: scale(1.05);
+}
+
 button#watchBtn { background:#e50914; color:#fff; }
 button#shareBtn { background:#25D366; color:#fff; }
 
 .details {
-  max-width:800px;
+  max-width:900px;
   margin:20px auto;
   text-align:left;
   padding:0 16px;
 }
-.details h1 { margin-bottom:10px; font-size:2em; }
+.details h1 { margin-bottom:10px; font-size:2.2em; }
 .details p { line-height:1.5; }
 
 .player {
@@ -82,10 +100,8 @@ button#shareBtn { background:#25D366; color:#fff; }
 }
 
 @media (max-width:768px){
-  .banner { height: 35vh; }
-  .banner img { height: 100%; }
-  .player { width:95%; height:auto; }
-  button { font-size:14px; padding:10px 20px; }
+  .banner { height: 40vh; }
+  button { font-size:14px; padding:12px 20px; }
 }
 </style>
 </head>
