--- a/series.html
+++ b/series.html
@@ -180,7 +180,7 @@ body{
   <button onclick="location.href='watch.html'">🏠 Home</button>
   <button onclick="location.href='movi.html'">🎬 Movies</button>
   <button onclick="location.href='donate.html'">❤️ Donate</button>
-  <button onclick="location.href='movies.html'">💍 Marriage Tips</button>
+  <button onclick="location.href='marriage.html'">💍 Marriage Tips</button>
 </div>
 
 <!-- SEARCH -->
