--- a/about.html
+++ b/about.html
@@ -106,6 +106,7 @@ body {
   <button onclick="location.href='packages.html'">💳 Pay to Watch</button>
   <button onclick="location.href='login.html'">🔐 Login</button>
   <button onclick="location.href='home.html'">⬅ Back</button>
+   <button onclick="location.href='install.html'">🔐 Install App</button>
 </div>
 
 <!-- Info Sections -->
